--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <h1>Dice Roll!</h1>
   <!-- add a button that calls your function -->
-  <button onclick="rollDice()">Roll</button>
+  <button id="roll" onclick="rollDice()">Roll</button>
   <script src="index.js"></script>
   <script src="tests.js"></script>
 </body>
